# EpochAI

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app1.sln  build.sh  install.sh  run.sh  vcpkg.json
Application1/: Application1.vcxproj  Application1.vcxproj.filters  CMakeLists.txt
Application1/src/: Application1.cpp
StaticLib1/: CMakeLists.txt  StaticLib1.vcxproj  StaticLib1.vcxproj.filters  framework.h
StaticLib1/include/: utils.hpp
StaticLib1/src/: StaticLib1.cpp
app1/: CMakeLists.txt  app1.vcxproj  app1.vcxproj.filters
app1/src/: main.cpp  utils.cpp
cmakeapp1/: CMakeLists.txt
cmakeapp1/include/: utils.hpp
cmakeapp1/src/: main.cpp
docs/: api.md  architecture.md  roadmap.md
epochai/: CMakeLists.txt
epochai/include/epochai/: app.hpp  count_metrics.hpp  http_client.hpp  io_utils.hpp  logger.hpp  state.hpp  tokenizer.hpp
epochai/src/: app.cpp  count_metrics.cpp  http_client.cpp  io_utils.cpp  logger.cpp  main.cpp  state.cpp  tokenizer.cpp
